# bemp

./: Cargo.toml  README.md  build.rs
src/: embeddings.rs  file_management.rs  main.rs
test_files/: example.rs
