[package]
name = "bemp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
clap = { version = "4.2.7", features = ["derive"] }
clippy = "0.0.302"
rust-bert = "0.20.0"
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tch = "0.10.3"
md5 = "0.7.0"
